Fix nav styling on mobile.

--- a/css/modules/_nav_primary.scss
+++ b/css/modules/_nav_primary.scss
@@ -38,7 +38,7 @@
 
     a {
       color: $blue;
-      padding: 0 0.5em;
+      padding: 0 0.25em;
       text-shadow: rem(1) rem(1) 0 $base-background-color, rem(2) rem(2) 0 $base-shadow-color;
 
       &:active,
@@ -46,6 +46,8 @@
       &:hover {
         color: $dark-blue;
       }
+
+      @include media($tablet) { padding: 0 0.5em; }
     }
 
 
